[workspace]
members = [
    ".",
    "examples",
]

[package]
name = "ppproto"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"

[features]
std = []

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.20", default-features = false, optional = true }

num_enum = { version = "0.7.0", default-features = false }
heapless = "0.7.16"
