[workspace]
members = [
    ".",
    "examples",
]

[package]
name = "ppproto"
version = "0.1.1"
edition = "2021"
description = "Point-to-Point Protocol (PPP) for embedded systems. `no-std` compatible, no alloc (heap) required."
repository = "https://github.com/embassy-rs/ppproto"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "network-programming",
]

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.20", default-features = false, optional = true }

num_enum = { version = "0.7.0", default-features = false }
heapless = "0.7.16"
