[workspace]
members = [
    ".",
    "examples",
]

[package]
name = "ppproto"
version = "0.2.1"
edition = "2021"
description = "Point-to-Point Protocol (PPP) for embedded systems. `no-std` compatible, no alloc (heap) required."
repository = "https://github.com/embassy-rs/ppproto"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "network-programming",
]

[features]
log = ["dep:log"]
defmt = ["dep:defmt", "defmt?/ip_in_core"]

[dependencies]
defmt = { version = "0.3.8", optional = true }
log = { version = "0.4.22", default-features = false, optional = true }

num_enum = { version = "0.7.3", default-features = false }
heapless = "0.8.0"
