[package]
name = "example"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
nix = "0.26.2"
ppproto = {path = ".."}
managed = { version = "0.8.0", default-features = false }
env_logger = "0.10.0"
smoltcp = { version = "0.10.0", features = ["log", "socket-tcp", "socket-udp", "proto-ipv4", "medium-ethernet"] }
log = "0.4.20"
futures = "0.3.28"
async-io = "1.13.0"
rand = "0.8.5"
