[package]
name = "ppproto"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[features]
std = []

derive-defmt = ["defmt", "smoltcp/defmt"]
logging-defmt = ["defmt", "derive-defmt"]
logging-log = ["log"]

defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
defmt = { version = "0.2.0", optional = true }
log = { version = "0.4.11", default-features = false, optional = true }

num_enum = { version = "0.5.1", default-features = false }
smoltcp = { version = "0.6.0", default-features = false, features = [ "proto-ipv4" ] }
as-slice = "0.1.4"
heapless = "0.5.6"
