[package]
name = "ppproto"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"

[features]
std = []

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.11", default-features = false, optional = true }

num_enum = { version = "0.5.1", default-features = false }
smoltcp = { version = "=0.8.0", default-features = false, features = [ "proto-ipv4" ] }
as-slice = "0.2.1"
heapless = "0.7.7"
